# lrc_chunker

./: .gitignore  EXTERNAL_LRC_PROCESS_PROTOCOL.md  README.md  environment.yml  lrc-processor-onefile.spec  lrc_external_processor.py  lyrics_chunker_baseline.py  manual_anchors_memories.csv  motion_m0_extract.py  motion_m1_demucs_benchmark.py  pyinstaller_runtime_external.py  pyproject.toml  word_timing_refine.py
.github/workflows/: build-windows-onefile.yml
ae_jobs/: README.md
ae_jobs/templates/batch/: batch_pairs.json.template  request.json.template
ae_jobs/templates/single/: request.json.template
docs/: AE_WSL_BRIDGE_HANDOFF.md  AE_WSL_BRIDGE_INTEGRATION.md  AE_WSL_BRIDGE_SMOKE_TEST.md  EXTERNAL_PLUGIN_DELIVERY.md  PROJECT_RESTORATION_DONE_CRITERIA.md  PY38_DEPENDENCY_MATRIX.md  REPRO_FULL_PARAMETERS.md  VIDEO_MODULE_RESTORE_REQUIREMENTS.md
examples/: Memories - Conan Gray.lrc
src/lrc_chunker/: __init__.py  alignment.py  baseline.py  chunking.py  display_timing.py  external_processor.py  lrc.py  m1_pipeline.py  models.py  motion_m0_extract.py  motion_m1_demucs_benchmark.py  utils.py  word_refine.py
test/: A COLD PLAY - The Kid LAROI.lrc  Baby Chop - boylife,No Rome,keshi.lrc  Cry Cry Cry - Coldplay.lrc  README_WINDOWS_E_TEST.md
test/job_batch/: batch_pairs.json  request.json
test/job_single/: request.json
tests/: test_pipeline.py
tools/: Test-WslNonBlocking.ps1  ae_launch_wsl.py  ae_launch_wsl.sh  anchor_optimize.py  build_external_onefile.ps1  build_external_onefile.sh  evaluate_refine_stability.py  wsl_bridge_smoke.py
